updated for today

--- a/Antuit_forecasting.ipynb
+++ b/Antuit_forecasting.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,57 +129,55 @@
       "25%               0.000000      0.000000       0.000000  \n",
       "50%               0.000000      9.629630       8.000000  \n",
       "75%               3.723648    198.587108     243.500000  \n",
-      "max              99.860810   9186.000000   27187.000000  \n",
-      "\n",
-      " Visualize the unique classes on each of variables\n",
-      "MAG: ['E01' 'E15' 'I26' 'I36' 'M41' 'W91']\n",
-      "AG: [ 620  638 3010 3079 3149 3155 3157 3160 3371 3568 3580 3590 5008 5041\n",
-      " 5100 7160 7366 7456 8189 8190 8193 8194 8871 8873 8958]\n",
-      "product_id: [   9   10   11   13   26   28   40   43   51  143  144  145  149  167\n",
-      "  168  175  185  211  213  218  224  229  234  237  239  240  276  277\n",
-      "  282  284  286  287  288  289  290  292  294  296  316  609 1640 1645\n",
-      " 1947 1948 1957 1960 1964 1967 1973 3233 3234 3240 3241 3244 3245 3248\n",
-      " 3250 3257 3260 3264 3266 3267 3270 3278 3290 3673 3681 3686 3691 3693\n",
-      " 3712 3714 3720 3734 3739 3740 3741 3745 3764 3765 3766 3768 3788 3789\n",
-      " 3794 3802 3808 3809 3813 3827 3833 3835 3838 3842 3843 3879 3881 3891\n",
-      " 3893 3903 3905 3906 3909 3914 3922 3924 3927 3928 3929 3930 3940 3944\n",
-      " 3951 3953 3955 3962 3964 3969 3984 3986 3988 3992 3993 3996 3999 4000\n",
-      " 4006 4007 4008 4010 4012 4016 4022 4023 4024 4900 4903 4907 4912 4914\n",
-      " 5024 5025 5030 5032 5033 5036 5056 5067 5072 5073]\n",
-      "account_id: [1]\n"
+      "max              99.860810   9186.000000   27187.000000  \n"
      ]
     }
    ],
    "source": [
-    "print(dataset.describe())\n",
-    "\n",
-    "# Rajeev: visualize the unique classes on each of variables.\n",
-    "print('\\n Visualize the unique classes on each of variables')\n",
-    "print('MAG: '+str(np.unique(dataset['MAG'])))\n",
-    "print('AG: '+str(np.unique(dataset['AG'])))\n",
-    "print('product_id: '+str(np.unique(dataset['product_id'])))\n",
-    "print('account_id: '+str(np.unique(dataset['account_id'])))"
+    "print(dataset.describe())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Empty DataFrame\n",
-      "Columns: [account_id, product_id, MAG, AG, date_id, promo_flag, promo_discount_perc, base_demand, ordered_units]\n",
-      "Index: []\n"
+      "       account_id  product_id    MAG     AG  date_id  promo_flag  \\\n",
+      "0           False       False  False  False    False       False   \n",
+      "1           False       False  False  False    False       False   \n",
+      "2           False       False  False  False    False       False   \n",
+      "3           False       False  False  False    False       False   \n",
+      "4           False       False  False  False    False       False   \n",
+      "...           ...         ...    ...    ...      ...         ...   \n",
+      "15342       False       False  False  False    False       False   \n",
+      "15343       False       False  False  False    False       False   \n",
+      "15344       False       False  False  False    False       False   \n",
+      "15345       False       False  False  False    False       False   \n",
+      "15346       False       False  False  False    False       False   \n",
+      "\n",
+      "       promo_discount_perc  base_demand  ordered_units  \n",
+      "0                    False        False          False  \n",
+      "1                    False        False          False  \n",
+      "2                    False        False          False  \n",
+      "3                    False        False          False  \n",
+      "4                    False        False          False  \n",
+      "...                    ...          ...            ...  \n",
+      "15342                False        False          False  \n",
+      "15343                False        False          False  \n",
+      "15344                False        False          False  \n",
+      "15345                False        False          False  \n",
+      "15346                False        False          False  \n",
+      "\n",
+      "[15347 rows x 9 columns]\n"
      ]
     }
    ],
    "source": [
-    "#print(dataset.isnull()) Rajeev: commented this line since in a long dataframe we cant actually see \n",
-    "# which is True and which is False. Below line should print NaN values\n",
-    "print(dataset[dataset.isnull().any(axis=1)])"
+    "print(dataset.isnull())"
    ]
   },
   {
@@ -205,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
